--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ layout: default
             <iframe src="https://app.acuityscheduling.com/schedule.php?owner=17098777" width="100%" height="800" frameBorder="0"></iframe><script src="https://d3gxy7nm8y4yjr.cloudfront.net/js/embed.js" type="text/javascript"></script>
             -->
             <form >
-                <div>
+                <!--div>
                     Are you looking to:
                     <ul style="margin-left: 10px;"> 
                     <li>
@@ -30,7 +30,7 @@ layout: default
                     <li> 
                     Make meaning full lifestyle changes?
                 </ul>
-                </div>
+                </div-->
                 <a href="https://app.acuityscheduling.com/schedule.php?owner=17098777" target="_blank" class="acuity-embed-button" style="background: #5fb8b9; color: #fff; padding: 8px 12px; border: 0px; -webkit-box-shadow: 0 -2px 0 rgba(0,0,0,0.15) inset;-moz-box-shadow: 0 -2px 0 rgba(0,0,0,0.15) inset;box-shadow: 0 -2px 0 rgba(0,0,0,0.15) inset;border-radius: 4px; text-decoration: none; display: inline-block;">Schedule Appointment</a><link rel="stylesheet" href="https://embed.acuityscheduling.com/embed/button/17098777.css" id="acuity-button-styles" /><script src="https://embed.acuityscheduling.com/embed/button/17098777.js" async></script>
             <!--<input type="submit" class="btn btn-default" value="Make A Booking">-->
             </form>
